# docker_image

./: .gitignore  Dockerfile  README.md  local_rag_backup.json  pyproject.toml  run_company_research_report.py  run_industry_research_report.py  run_marco_research_report.py
app/: data_collection_pipeline.py  document_conversion_pipeline.py  run.py  run.sh
app/company/agent/: agent_factory.py  base_agent.py
app/company/agent/outline/: outline_generator_part.py  outline_opinion_generator_part.py
app/company/agent/parts/: part_abstract_generator_part.py  part_generator_part.py  part_opinion_generator_part.py
app/company/model/: report_info.py
app/company/prompt/outline/: generate_outline_part.py
app/utils/: search_engine.py
company_info/: 4Paradigm_HK_06682_info.txt  云从科技_A_SH688327_info.txt  商汤科技_HK_00020_info.txt  百度_HK_09888_info.txt  科大讯飞_A_SZ002230_info.txt
download_financial_statement_files/: 4Paradigm_HK_06682_balance_sheet_年度.csv  4Paradigm_HK_06682_cash_flow_statement_年度.csv  4Paradigm_HK_06682_income_statement_年度.csv  云从科技_A_SH688327_balance_sheet_年度.csv  云从科技_A_SH688327_cash_flow_statement_年度.csv  云从科技_A_SH688327_income_statement_年度.csv  商汤科技_HK_00020_balance_sheet_年度.csv  商汤科技_HK_00020_cash_flow_statement_年度.csv  商汤科技_HK_00020_income_statement_年度.csv  科大讯飞_A_SZ002230_balance_sheet_年度.csv  科大讯飞_A_SZ002230_cash_flow_statement_年度.csv  科大讯飞_A_SZ002230_income_statement_年度.csv
industry_info/: all_search_results.json
